<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hw3.ProfileActivity">


    <ImageView
        android:id="@+id/profile_background"
        android:layout_width="0dp"
        android:layout_height="177dp"
        android:src="@drawable/profile_title_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@+id/profile_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_title"
        style="@style/text_profile_info_style"
        android:layout_width="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="17dp"
        android:text="@string/profile_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_border"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/profile_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_view"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:src="@drawable/img_secondary_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_border" />

    <ImageView
        android:id="@+id/profile_about"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/profile_about_rectangle"
        app:layout_constraintBottom_toBottomOf="@id/profile_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_view"
        app:layout_constraintTop_toBottomOf="@id/profile_border" />

    <TextView
        android:id="@+id/text_name"
        style="@style/text_profile_info_style"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/profile_about"
        app:layout_constraintTop_toTopOf="@id/profile_about" />

    <TextView
        android:id="@+id/text_surname"
        style="@style/text_profile_info_style"
        android:layout_marginStart="20dp"
        android:layout_marginTop="33dp"
        android:text="@string/surname"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/profile_about"
        app:layout_constraintTop_toTopOf="@id/profile_about" />

    <TextView
        android:id="@+id/text_patronymic"
        style="@style/text_profile_info_style"
        android:layout_marginStart="20dp"
        android:layout_marginTop="54dp"
        android:text="@string/patronymic"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/profile_about"
        app:layout_constraintTop_toTopOf="@id/profile_about" />

    <TextView
        android:id="@+id/text_birth"
        style="@style/text_profile_info_style"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="@string/birth"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@id/profile_about"
        app:layout_constraintTop_toTopOf="@id/profile_about" />

    <TextView
        android:id="@+id/text_birth_date"
        style="@style/text_profile_info_style"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:text="@string/birth_date"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@id/profile_about"
        app:layout_constraintTop_toTopOf="@id/profile_about" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/profile_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_city"
                style="@style/text_profile_about_style"
                android:layout_marginTop="24dp"
                android:text="@string/title_city"
                android:textColor="@color/text_title_color" />

            <TextView
                android:id="@+id/city"
                style="@style/text_profile_about_style"
                android:layout_marginTop="8dp"
                android:text="@string/city"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/title_about"
                style="@style/text_profile_about_style"
                android:layout_marginTop="20dp"
                android:text="@string/title_about"
                android:textColor="@color/text_title_color" />

            <TextView
                android:id="@+id/about"
                style="@style/text_profile_about_style"
                android:layout_marginTop="8dp"
                android:text="@string/about"
                android:textColor="@color/text_color" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/profile_btn_color"
        android:fontFamily="@font/roboto"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_profile_text"
        android:textColor="@color/profile_btn_text_color"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>